# Adaptive_learning_agents

./: .env.example  .gitignore  Plan.MD  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 371b34ab659f_add_total_conversations_and_last_active_.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/agents/: course_agent.py  student_agent.py
app/tests/: conftest.py  test_student_agent.py
